feat refactoring: pagamento de fatura valor total,registrando transação para cada lançamento da fatura e refatoração